...
                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4J-Qu-IcG" userLabel="CloseButton">
                    <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                    <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="nfC-Wn-9cy"/>
                    </constraints>
                    <state key="normal" title="Close"/>
                    <connections>
                        <action selector="closeButtonDidTap:" destination="-1" eventType="touchUpInside" id="8OC-bz-s8N"/>
                    </connections>
                </button>
            </subviews>
            <accessibility key="accessibilityConfiguration" identifier="features_list_view">
                <accessibilityTraits key="traits" notEnabled="YES"/>
                <bool key="isElement" value="NO"/>
            </accessibility>
            <constraints>
                <constraint firstAttribute="bottom" secondItem="I4J-Qu-IcG" secondAttribute="bottom" id="3A2-zZ-FeV"/>
                <constraint firstItem="I4J-Qu-IcG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="CV1-0h-O7G"/>
...
            <point key="canvasLocation" x="-460.5" y="-193.5"/>
        </view>
        <view contentMode="scaleToFill" id="7KN-Ba-A7A" userLabel="PlaceholderView">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Features Available" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hT7-nb-jJD">
                    <rect key="frame" x="0.0" y="321" width="375" height="25.5"/>
                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
            </subviews>
...
