...
    let navigationController: UINavigationController
    let navigationItem: UINavigationItem
}

class CreditsFeature: Feature<CreditsFeaturePayload> {

	static let name = "Credits"

    private lazy var barItem: UIBarButtonItem = {
        return UIBarButtonItem(title: CreditsFeature.name, style: .plain, target: self, action: #selector(creditsButtonDidTap(_:)))
    }()
    
	override func main() {
...
